Добавлена библиотека AstraLib

--- a/DiplomVConsoleSchemeODU/DiplomVConsoleSchemeODU.csproj
+++ b/DiplomVConsoleSchemeODU/DiplomVConsoleSchemeODU.csproj
@@ -8,12 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <COMReference Include="ASTRALib">
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>84b05080-abc9-11d3-b740-00500454cf3f</Guid>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ModelODU\ModelODU.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="ASTRALib">
-      <HintPath>..\..\..\..\..\Program Files\RastrWin3\ASTRALib.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\RastrWin3\ASTRALib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
