--- a/ModelODU/ModelODU.csproj
+++ b/ModelODU/ModelODU.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Reference Include="ASTRALib">
-      <HintPath>..\..\..\..\..\Program Files\RastrWin3\ASTRALib.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\RastrWin3\ASTRALib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
